--- a/src/global.css
+++ b/src/global.css
@@ -1,19 +1,17 @@
 :root {
-
   --white: #ffffff;
-  --gray-100: #F2F2F2;
-  --gray-200: #D9D9D9;
+  --gray-100: #f2f2f2;
+  --gray-200: #d9d9d9;
   --gray-300: #808080;
   --gray-400: #333333;
   --gray-500: #262626;
-  --gray-600: #1A1A1A;
-  --gray-700: #0D0D0D;
-  --purple: #8284FA;
-  --purple-dark: #5E60CE;
-  --blue: #4EA8DE;
-  --blue-dark: #1E6F9F;
-  --danger: #E25858;
-
+  --gray-600: #1a1a1a;
+  --gray-700: #0d0d0d;
+  --purple: #8284fa;
+  --purple-dark: #5e60ce;
+  --blue: #4ea8de;
+  --blue-dark: #1e6f9f;
+  --danger: #e25858;
 }
 
 * {
@@ -32,7 +30,7 @@ body,
 input,
 textarea,
 button {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 140%;
