--- a/src/components/NewTaskForm.module.css
+++ b/src/components/NewTaskForm.module.css
@@ -21,12 +21,13 @@
   border-radius: 8px;
   padding: 1rem;
 
+  font-size: 0.875rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .newTask button[type="submit"] img {
-  width: 0.875rem;
-  height: 0.875rem;
+  width: 1rem;
+  height: 1rem;
 }
