style: adjust line heights

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,10 +2,10 @@
   background: var(--gray-700);
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 12.5rem;
 }
 
 .header img {
+  margin-top: 4.75rem;
   height: 3rem;
 }
