--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -1,14 +1,41 @@
-.noTasks {
+.task {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 4rem 1.5rem;
-  gap: 1rem;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 0.75rem;
 
-  border-top: 1px solid var(--gray-400);
-  border-radius: 8px;
+  padding: 1rem;
+  background: var(--gray-500);
+  border: 1px solid var(--gray-400);
+  border-radius: 0.25rem;
+}
 
+
+.task .checkbox {
+  color: var(--blue);
+}
+
+.task .checkbox:hover {
+  color: var(--blue-dark);
+}
+
+.task p {
+  text-align: justify;
+}
+
+.task button {
+  background: transparent;
+  border: 0;
   color: var(--gray-300);
+  cursor: pointer;
+  line-height: 0;
+  border-radius: 4px;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.task button:hover {
+  color: var(--danger);
+  background-color: var(--gray-400);
 }
