--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -1,23 +1,12 @@
 .task {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: 1.5rem 1fr 1.5rem;
   gap: 0.75rem;
 
   padding: 1rem;
   background: var(--gray-500);
   border: 1px solid var(--gray-400);
   border-radius: 0.25rem;
-}
-
-
-.task .checkbox {
-  color: var(--blue);
-}
-
-.task .checkbox:hover {
-  color: var(--blue-dark);
 }
 
 .task p {
